# Civ-Plugin

./: .gitattributes  .gitignore  README.md
.github/workflows/: determinism.yml
BlenderAssets/: HexTile.blend  HexTile.blend1
Civ_Unity_Wrapper/Assets/Plugins/: MapGeneratorWrapper.cs
Civ_Unity_Wrapper/Assets/Plugins/Editor/: MapGeneratorWrapperEditor.cs
Civ_Unity_Wrapper/Assets/Plugins/Objects/: Material.mat
Civ_Unity_Wrapper/Assets/Scenes/: SampleScene.unity
Civ_Unity_Wrapper/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Civ_Unity_Wrapper/ProjectSettings/: ProjectSettings.asset
Civ_Unreal_Wrapper/: .gitignore  .ignore  Civ_Unreal_Wrapper.code-workspace  Civ_Unreal_Wrapper.uproject  Makefile
Civ_Unreal_Wrapper/Config/: DefaultEngine.ini  DefaultGame.ini
Civ_Unreal_Wrapper/Content/: MapGenBP.uasset  PluginLevel.umap
Civ_Unreal_Wrapper/Plugins/MapGenPlugin/: BLUEPRINT_GUIDE.md  BUGFIX_BLUEPRINT_CRASH.md  FILES_CREATED.txt  IMPLEMENTATION_COMPARISON.md  MapGenPlugin.uplugin  QUICK_START.md  README.md  SOURCE_MAPPING.md  SUMMARY.md
Civ_Unreal_Wrapper/Plugins/MapGenPlugin/Content/: Level.umap  MapGenerationActor.uasset
Civ_Unreal_Wrapper/Plugins/MapGenPlugin/Source/MapGenPlugin/: MapGenPlugin.Build.cs
Civ_Unreal_Wrapper/Source/: Civ_Unreal_Wrapper.Target.cs  Civ_Unreal_WrapperEditor.Target.cs
Civ_Unreal_Wrapper/Source/Civ_Unreal_Wrapper/: Civ_Unreal_Wrapper.Build.cs  Civ_Unreal_Wrapper.cpp
MapGenerationPlugin/: CMakeLists.txt  CorePlugin.cpp  CorePlugin.h  LineGeneratorPlugin.cpp  LineGeneratorPlugin.h  LineGenerator_Wrapper.cpp  LineGenerator_Wrapper.h  MapGeneratorBridge.cs  SumatoryCorePlugin.cpp  SumatoryPlugin.cpp  SumatoryWrapper.cpp  SumatoryWrapper.h
StrategyMapGenerationPlugin/: .gitignore  AgnosticRandom.md  CMakeLists.txt  Makefile
StrategyMapGenerationPlugin/include/: CoreAPI.h  HexCoord.h  HexGrid.h  HexTile.h  PerlinNoiseGenerator.h  RandomGenerator.h  TectonicsGenerator.h
StrategyMapGenerationPlugin/include/api/: MapGenerationAPI.h
StrategyMapGenerationPlugin/include/generation/: PerlinNoiseGenerator.h  RandomGenerator.h  TectonicsGenerator.h
StrategyMapGenerationPlugin/include/hex/: HexCoord.h  HexGrid.h  HexTile.h
StrategyMapGenerationPlugin/memory/: feedback_code_style.md
StrategyMapGenerationPlugin/src/: HexCoord.cpp  HexGrid.cpp  HexTile.cpp  PerlinNoiseGenerator.cpp  RandomGenerator.cpp  TectonicsGenerator.cpp
StrategyMapGenerationPlugin/src/api/: MapGenerationAPI.cpp
StrategyMapGenerationPlugin/src/generation/: PerlinNoiseGenerator.cpp  RandomGenerator.cpp  TectonicsGenerator.cpp
StrategyMapGenerationPlugin/src/hex/: HexCoord.cpp  HexGrid.cpp  HexTile.cpp
StrategyMapGenerationPlugin/tests/: HexCoordTests.cpp  HexGridTests.cpp  HexTileTests.cpp  PerlinNoiseGeneratorTests.cpp  RandomGeneratorTests.cpp  TectonicsGeneratorTests.cpp
StrategyMapGenerationPlugin/tests/api/: MapGenerationAPITests.cpp
StrategyMapGenerationPlugin/tests/generation/: PerlinNoiseGeneratorTests.cpp  RandomGeneratorTests.cpp  TectonicsGeneratorTests.cpp
StrategyMapGenerationPlugin/tests/hex/: HexCoordTests.cpp  HexGridTests.cpp  HexTileTests.cpp
StrategyMapGenerationPlugin/tools/: determinism_check.cpp
TestingPlugin/Pre-plugin/: CorePlugin.cpp  MapGeneratorBridge.cs  SumatoryCorePlugin.h
Unity_Project/: Unity_Project.slnx
Unity_Project/Assets/: UniversalRenderPipelineGlobalSettings.asset
Unity_Project/Assets/Plugins/: MapGeneratorBridge.cs  MapGeneratorWrapper.cs
Unity_Project/Assets/Plugins/Objects/: HexTile.fbx  TileMaterial.mat
Unity_Project/Assets/Prefabs/: Sphere.prefab
Unity_Project/Assets/Scenes/: SampleScene.unity  TestingScene.unity
Unity_Project/ProjectSettings/: ProjectSettings.asset
Unreal_Project/: Unreal_Project.uproject  UpgradeLog.htm
Unreal_Project/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal_Project/Content/: NewMap.umap  NewMap_HLOD0_Instancing.uasset
Unreal_Project/Content/Blueprints/: BP_Aspen_Twig.uasset  NewBlueprint.uasset
Unreal_Project/Content/Megaplant_Library/Tree_European_Aspen/Instances/: Aspen_Twig_Dead_L_01.uasset  Aspen_Twig_Dead_L_02.uasset  Aspen_Twig_Dead_M_01.uasset  Aspen_Twig_L_01.uasset  Aspen_Twig_L_02.uasset  Aspen_Twig_M_01.uasset  BrLeaf_000.uasset  BrLeaf_001.uasset  BrLeaf_002.uasset  BrLeaf_003.uasset  BrLeaf_004.uasset  BrLeaf_005.uasset  BrLeaf_006.uasset  SKM_Aspen_Twig_Dead_L_01.uasset  SKM_Aspen_Twig_Dead_L_02.uasset  SKM_Aspen_Twig_Dead_M_01.uasset  SKM_Aspen_Twig_L_01.uasset  SKM_Aspen_Twig_L_02.uasset  SKM_Aspen_Twig_M_01.uasset  SK_Aspen_Twig_Dead_L_01.uasset  SK_Aspen_Twig_Dead_L_02.uasset  SK_Aspen_Twig_Dead_M_01.uasset  SK_Aspen_Twig_L_01.uasset  SK_Aspen_Twig_L_02.uasset  SK_Aspen_Twig_M_01.uasset
Unreal_Project/Content/Megaplant_Library/Tree_European_Aspen/Materials/: MI_European_Aspen_Bark_01.uasset  MI_European_Aspen_Foliage_01.uasset
Unreal_Project/Plugins/CorePlugin/: CorePlugin.uplugin
Unreal_Project/Plugins/CorePlugin/Config/: DefaultCorePlugin.ini
Unreal_Project/Plugins/SamplePlugin/: SamplePlugin.uplugin
Unreal_Project/Source/: Unreal_Project.Target.cs  Unreal_ProjectEditor.Target.cs
(+176 files in other folders)
